[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lunarpy"
version = "0.1.0"
description = "A Python package for lunar data analysis."
authors = [{name = "cosmic-nori"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/cosmic-nori/lunarpy"
